[tool.poetry]
name = "eolass-backend"
version = "0.1.0"
description = ""
authors = ["Qhris-tian <christian.kojobarnes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
httpx = "^0.24.0"
snakecase = "^1.0.1"
motor = "^3.1.2"
motor-types = "^1.0.0b1"
ratelimit = "^2.2.1"
requests = "^2.31.0"
types-requests = "^2.31.0.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = "^23.3.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
ruff = "^0.0.262"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
log_cli = 1
addopts = '''
  --strict-markers
  --tb=short
  --cov=src
  --cov=tests
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --no-cov-on-fail
  --cov-fail-under=100
'''
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]

[tool.ruff.mccabe]
max-complexity = 10
